e2e-tests/tests/gr-haproxy/04-drop-finalizer.yaml
apiVersion: ps.percona.com/v1alpha1
kind: PerconaServerMySQL
metadata:
  name: gr-haproxy
  finalizers: []
