e2e-tests/tests/gr-haproxy/98-drop-finalizer.yaml
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQL
metadata:
  name: gr-haproxy
  finalizers: []
