e2e-tests/tests/gr-haproxy/01-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 420
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: gr-haproxy-mysql
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
  currentReplicas: 3
  updatedReplicas: 3
  collisionCount: 0
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: gr-haproxy-haproxy
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
  updatedReplicas: 3
---
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQL
metadata:
  name: gr-haproxy
  finalizers:
    - percona.com/delete-mysql-pods-in-order
status:
  mysql:
    ready: 3
    size: 3
    state: ready
  haproxy:
    ready: 3
    size: 3
    state: ready
  state: ready
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: gr-haproxy
    app.kubernetes.io/managed-by: percona-server-mysql-operator
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: percona-server

  name: gr-haproxy-mysql
  ownerReferences:
  - apiVersion: ps.percona.com/v1
    blockOwnerDeletion: true
    controller: true
    kind: PerconaServerMySQL
    name: gr-haproxy
spec:
  clusterIP: None
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  - name: mysql-admin
    port: 33062
    protocol: TCP
    targetPort: 33062
  - name: mysqlx
    port: 33060
    protocol: TCP
    targetPort: 33060
  - name: http
    port: 6450
    protocol: TCP
    targetPort: 6450
  - name: mysql-gr
    port: 33061
    protocol: TCP
    targetPort: 33061
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: gr-haproxy
    app.kubernetes.io/managed-by: percona-server-mysql-operator
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: percona-server
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: gr-haproxy
    app.kubernetes.io/managed-by: percona-server-mysql-operator
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/part-of: percona-server
  name: gr-haproxy-haproxy
  ownerReferences:
  - apiVersion: ps.percona.com/v1
    blockOwnerDeletion: true
    controller: true
    kind: PerconaServerMySQL
    name: gr-haproxy
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  - name: mysql-replicas
    port: 3307
    protocol: TCP
    targetPort: 3307
  - name: proxy-protocol
    port: 3309
    protocol: TCP
    targetPort: 3309
  - name: mysqlx
    port: 33060
    protocol: TCP
    targetPort: 33060
  - name: mysql-admin
    port: 33062
    protocol: TCP
    targetPort: 33062
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: gr-haproxy
    app.kubernetes.io/managed-by: percona-server-mysql-operator
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/part-of: percona-server
  sessionAffinity: None
  type: ClusterIP
