e2e-tests/tests/gr-haproxy/03-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 30
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: 03-check-connections
data:
  primary: "1"
  replica: "1"
  # proxy_protocol: "1"
  mysqlx: "1"
  mysql_admin: "1"
